--- a/PartyMasterFrontend/src/index.css
+++ b/PartyMasterFrontend/src/index.css
@@ -32,3 +32,14 @@ div#game {
   box-sizing: border-box;
   border: 4px solid black;
 }
+
+.micon {
+  font-family: 'Material Symbols Outlined';
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24;
+  font-size: 48px;
+
+}
