--- a/PartyMasterFrontend/src/Chat.css
+++ b/PartyMasterFrontend/src/Chat.css
@@ -1,7 +1,7 @@
 
 #chat {
     width: 4rem;
-    padding: 1rem;
+    padding: 1rem 0rem;
     transition: 0.3s 0s ease;
     min-width: 0px;
     display: flex;
@@ -10,14 +10,15 @@
     box-sizing: border-box;
     flex-direction: column;
     flex-wrap: nowrap;
+    gap: 1rem;
 }
 
 #chat:hover {
     width: 40vw;
 }
 
-#chat > div {
-    width: calc(40vw - 2rem);
+#chat * {
+    transition: inherit;
 }
 
 #chat .chat-header {
@@ -27,7 +28,8 @@
     align-items: center;
     gap: 2rem;
     justify-content: stretch;
-    transition: inherit;
+    margin: 0rem 1rem;
+    width: calc(40vw - 2rem);
 }
 
 #chat .chat-header .chat-icon {
@@ -36,7 +38,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: inherit;
 }
 
 #chat:hover .chat-header .chat-icon {
@@ -45,7 +46,6 @@
 }
 
 #chat .chat-header .chat-title {
-    transition: inherit;
     opacity: 0;
 }
 
@@ -60,8 +60,15 @@
     flex-wrap: nowrap;
     align-items: stretch;
     justify-content: stretch;
-    transition: inherit;
     opacity: 0;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 0px #000;
+    margin: 0rem 1rem;
+    width: calc(40vw - 2rem);
+}
+
+#chat .chat-input-box:has(#chat-input-message:focus) {
+    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 8px #000;
 }
 
 #chat:hover .chat-input-box {
@@ -77,9 +84,9 @@
     margin: 0px;
     padding: 0.75px 1.5rem;
     border-radius: 2rem 0px 0px 2rem;
-    transition: inherit;
     outline: none !important;
     font-size: 1.5rem;
+    min-width: 0px;
 }
 
 #chat .chat-input-box #chat-send-message {
@@ -89,6 +96,7 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    padding-right: 0.25rem;
     display: block;
     align-content: center;
     background-color: #fff;
@@ -97,7 +105,8 @@
     color: #000;
     border-radius: 0px 2rem 2rem 0px;
     box-shadow: 0px 0px 0px 0px #000 inset;
-    transition: inherit;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 #chat .chat-input-box #chat-send-message:hover {
@@ -112,4 +121,102 @@
 
 #chat .chat-log {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: nowrap;
+    overflow: visible;
+    overflow-y: scroll;
+    overflow-x: visible;
+    align-items: stretch;
+    width: calc(40vw);
+}
+
+#chat .chat-log .message-box {
+    interpolate-size: allow-keywords;
+    height: auto;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: stretch;
+    overflow-y: visible;
+    overflow-x: visible;
+}
+
+#chat .chat-log .message-box .message {
+    height: min-content;
+    display: grid;
+    grid-template-columns: calc(2rem + 0px) auto 1fr;
+    grid-template-rows: 1rem auto;
+    padding-top: 1rem;
+    /* position: relative;
+    left: -1rem;
+    right: -1rem; */
+    overflow: visible;
+    margin-left: calc(2rem - 16px);
+    margin-right: 16px;
+}
+
+#chat:hover .chat-log .message-box .message {
+    margin-left: calc(1rem + 4px);
+    margin-right: calc(1rem - 4px);
+}
+
+#chat .chat-log .message-box .message .message-icon {
+    grid-column: 1;
+    grid-row: 1 / 3;
+    align-self: start;
+    justify-self: center;
+    width: 2rem;
+    height: 2rem;
+    margin: 4px 0px;
+    user-select: none;
+    border-radius: 5rem;
+    box-shadow: 0px 0px 0px 4px #000;
+    background-color: #000;
+}
+
+#chat .chat-log .message-box .message .message-name {
+    grid-column: 3;
+    grid-row: 1;
+    align-self: center;
+    justify-self: start;
+    height: 1rem;
+    color: #000;
+    font-weight: 200;
+    font-size: 0.75rem;
+    user-select: none;
+    opacity: 0;
+}
+
+#chat .chat-log .message-box .message .message-separator {
+    width: 4px;
+    border-radius: 2px;
+    grid-column: 2;
+    grid-row: 1 / 3;
+    align-self: stretch;
+    background-color: #000;
+    user-select: none;
+    margin: 0px 12px 0px 8px;
+}
+
+#chat:hover .chat-log .message-box .message .message-separator {
+    margin: 0px 8px 0px 12px;
+}
+
+#chat:hover .chat-log .message-box .message .message-content,
+#chat:hover .chat-log .message-box .message .message-name {
+    opacity: 1;
+}
+
+#chat .chat-log .message-box .message .message-content {
+    grid-column: 3;
+    grid-row: 2;
+    align-self: start;
+    justify-self: start;
+    text-align: left;
+    text-wrap: wrap;
+    font-weight: 400;
+    font-size: 1rem;
+    opacity: 0;
 }
