--- a/PartyMasterFrontend/src/Player.css
+++ b/PartyMasterFrontend/src/Player.css
@@ -33,19 +33,20 @@
 }
 
 .playerlist .player .player-icon {
-    border-radius: 50%;
+    border-radius: 5rem;
     width: 2rem;
     height: 2rem;
     box-shadow: 0px 0px 0px 4px black;
     overflow: hidden;
     transition: inherit;
-    background-color: white;
+    background-color: black;
     z-index: 2;
 }
 
 .playerlist:hover .player .player-icon {
     width: 3rem;
     height: 3rem;
+    box-shadow: 0px 0px 0px 4px black;
 }
 
 .playerlist .player .player-icon img {
@@ -80,7 +81,7 @@
     font-weight: 800;
 }
 
-.playerlist .player:hover .player-icon {
+.playerlist:hover .player:hover .player-icon {
     box-shadow: 0px 0px 0px 8px black;
     width: 4rem;
     height: 4rem;
