--- a/PartyMasterFrontend/src/Chat.css
+++ b/PartyMasterFrontend/src/Chat.css
@@ -122,7 +122,8 @@
 #chat .chat-log {
     flex-grow: 1;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    justify-content: flex-end;
     flex-wrap: nowrap;
     overflow: visible;
     overflow-y: scroll;
