--- a/PartyMasterFrontend/src/index.css
+++ b/PartyMasterFrontend/src/index.css
@@ -22,11 +22,11 @@ div#root {
     width: 100%;
     height: 100%;
     position: relative;
-    display: grid;
-    grid-template-columns: auto 1fr auto;
-    grid-template-rows: 1fr;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
     align-items: stretch;
-    justify-items: stretch;
+    justify-content: center;
     box-sizing: border-box;
 }
 
@@ -35,6 +35,8 @@ div#game {
     border-radius: 1rem;
     box-sizing: border-box;
     border: 4px solid black;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .micon {
