--- a/PartyMasterFrontend/src/Chat.css
+++ b/PartyMasterFrontend/src/Chat.css
@@ -87,6 +87,7 @@
     outline: none !important;
     font-size: 1.5rem;
     min-width: 0px;
+    text-align: left;
 }
 
 #chat .chat-input-box #chat-send-message {
