style uniformisation and new logo

--- a/PartyMasterFrontend/src/Chat.css
+++ b/PartyMasterFrontend/src/Chat.css
@@ -13,7 +13,8 @@
     gap: 1rem;
 }
 
-#chat:hover {
+#chat:hover,
+#chat:has(:focus) {
     width: 40vw;
 }
 
@@ -40,7 +41,8 @@
     justify-content: center;
 }
 
-#chat:hover .chat-header .chat-icon {
+#chat:hover .chat-header .chat-icon,
+#chat:has(:focus) .chat-header .chat-icon {
     width: 4rem;
     height: 2rem;
 }
@@ -49,7 +51,8 @@
     opacity: 0;
 }
 
-#chat:hover .chat-header .chat-title {
+#chat:hover .chat-header .chat-title,
+#chat:has(:focus) .chat-header .chat-title {
     opacity: 1;
 }
 
@@ -71,7 +74,8 @@
     box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 8px #000;
 }
 
-#chat:hover .chat-input-box {
+#chat:hover .chat-input-box,
+#chat:has(:focus) .chat-input-box {
     opacity: 1;
 }
 
@@ -159,7 +163,8 @@
     margin-right: 16px;
 }
 
-#chat:hover .chat-log .message-box .message {
+#chat:hover .chat-log .message-box .message,
+#chat:has(:focus) .chat-log .message-box .message {
     margin-left: calc(1rem + 4px);
     margin-right: calc(1rem - 4px);
 }
@@ -202,12 +207,15 @@
     margin: 0px 12px 0px 8px;
 }
 
-#chat:hover .chat-log .message-box .message .message-separator {
+#chat:hover .chat-log .message-box .message .message-separator,
+#chat:has(:focus) .chat-log .message-box .message .message-separator {
     margin: 0px 8px 0px 12px;
 }
 
 #chat:hover .chat-log .message-box .message .message-content,
-#chat:hover .chat-log .message-box .message .message-name {
+#chat:has(:focus) .chat-log .message-box .message .message-content,
+#chat:hover .chat-log .message-box .message .message-name,
+#chat:has(:focus) .chat-log .message-box .message .message-name {
     opacity: 1;
 }
 
