--- a/PartyMasterFrontend/src/Menu.css
+++ b/PartyMasterFrontend/src/Menu.css
@@ -18,7 +18,7 @@ button.form-button {
     transition: 0.3s 0s ease;
 }
 
-button.form-button:hover {
+button.form-button:hover, button.form-button:focus {
     box-shadow: 0px 0px 0px 4px var(--bg), 0px 0px 0px 8px #000, 0px 0px 0px 10px transparent;
 }
 
@@ -78,19 +78,22 @@ input[type="text"] {
     background-color: var(--bg);
 }
 
-input[type="text"]::placeholder {
+input[type="text"].form::placeholder {
     color: #0008;
 }
 
-input[type="text"]#lobbyCode {
+input[type="text"].form#lobbyCode {
     text-transform: uppercase;
     font-weight: 600;
     box-shadow: 0px 0px 0px 9px #0000, 0px 0px 0px 4px var(--bg), 0px 0px 0px -1px #000;
 }
 
-input[type="text"]#lobbyCode:focus {
-    text-transform: uppercase;
+input[type="text"].form {
     font-weight: 600;
+    box-shadow: 0px 0px 0px 9px #0000, 0px 0px 0px 4px var(--bg), 0px 0px 0px -1px #000;
+}
+
+input[type="text"].form:focus {
     box-shadow: 0px 0px 0px 9px #0000, 0px 0px 0px 4px var(--bg), 0px 0px 0px 8px #000;
     background-color: #fff;
 }
@@ -108,15 +111,45 @@ input[type="text"]#lobbyCode:focus {
     grid-template-rows: auto;
     align-items: center;
     justify-items: center;
+    margin-bottom: 1em;
 }
 
 button.icon-swap {
-    font-family: "Material Symbols Outlined";
+    font-family: "Material Symbols Rounded";
     font-size: 40px;
     border: none;
     outline: none;
     background-color: transparent;
     color: #000;
-    font-weight: 400;
+    font-weight: 600;
+    padding: 0.5em;
     
+}
+
+button.icon-swap span {
+    font-family: "Material Symbols Rounded";
+    font-size: 40px;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: #000;
+    font-weight: 600;
+    filter: drop-shadow(0px 0px 0px black);
+    transition: 0.3s ease;
+    position: relative;
+    left: 0px;
+}
+
+button.icon-swap:hover span {
+    filter: drop-shadow(12px 0px 0px black);
+}
+
+button.icon-swap:active span {
+    filter: drop-shadow(0px 0px 0px black);
+    left: 24px;
+    transition: 0.05s ease;
+}
+
+button.icon-swap#icon-last {
+    transform: scaleX(-1);
 }
