--- a/PartyMasterFrontend/src/Chat.css
+++ b/PartyMasterFrontend/src/Chat.css
@@ -127,8 +127,7 @@
 #chat .chat-log {
     flex-grow: 1;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    flex-direction: column-reverse;
     flex-wrap: nowrap;
     overflow: visible;
     overflow-y: scroll;
