--- a/PartyMasterFrontend/src/index.css
+++ b/PartyMasterFrontend/src/index.css
@@ -44,11 +44,10 @@ div#game {
     font-family: 'Material Symbols Rounded';
     font-variation-settings:
         'FILL' 0,
-        'wght' 400,
         'GRAD' 0,
         'opsz' 24;
     font-size: 48px;
-
+    font-weight: 400;
 }
 
 button {
