--- a/PartyMasterFrontend/src/Player.css
+++ b/PartyMasterFrontend/src/Player.css
@@ -32,6 +32,50 @@
     max-height: 100px;
 }
 
+.playerlist .player .player-name .player-kick {
+    float: right;
+    transform: scale(0);
+    opacity: 0;
+    transition: inherit;
+    height: 24px;
+    border-radius: 12px;
+    background-color: var(--bg);
+    padding: 0px;
+    margin: 0px;
+    box-shadow: 0px 0px 0px 4px var(--bg), 0px 0px 0px 10px transparent, 0px 0px 0px 0px #000f;
+    outline: none;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    color: #0000;
+    padding-left: 1rem;
+    font-weight: 800;
+    grid-column: 3;
+}
+.playerlist .player .player-name .player-kick span {
+    font-size: 24px;
+    padding-left: 0.5em;
+    display: block;
+    width: 24px;
+    color: #000;
+    font-weight: 800;
+}
+.playerlist .player:hover .player-name .player-kick {
+    float: right;
+    transform: scale(1);
+    opacity: 1;
+}
+.playerlist .player:hover .player-name .player-kick:hover {
+    box-shadow: 0px 0px 0px 4px #fc4c4c, 0px 0px 0px 10px transparent, 0px 0px 0px 8px #000f;
+    color: #000f;
+    background-color: #fc4c4c;
+}
+.playerlist .player .player-name .player-master {
+    padding: 0.5rem;
+}
+
 .playerlist .player .player-icon {
     border-radius: 5rem;
     width: 2rem;
@@ -61,6 +105,10 @@
     text-wrap: nowrap;
     transition: inherit;
     font-weight: 400;
+    flex-grow: 1;
+    display: grid;
+    align-items: center;
+    grid-template-columns: auto 1fr auto;
 }
 
 .playerlist .player:hover {
