--- a/PartyMasterFrontend/src/Chat.css
+++ b/PartyMasterFrontend/src/Chat.css
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     flex-direction: column;
     flex-wrap: nowrap;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 #chat:hover,
@@ -63,15 +63,17 @@
     flex-wrap: nowrap;
     align-items: stretch;
     justify-content: stretch;
+    height: 3rem;
     opacity: 0;
     border-radius: 2rem;
-    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 0px #000;
+    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 0px #000, 0px 0px 0px 12px transparent;
     margin: 0rem 1rem;
     width: calc(40vw - 2rem);
+    border: solid 4px black;
 }
 
 #chat .chat-input-box:has(#chat-input-message:focus) {
-    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 8px #000;
+    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 8px #000, 0px 0px 0px 12px transparent;
 }
 
 #chat:hover .chat-input-box,
@@ -80,14 +82,12 @@
 }
 
 #chat .chat-input-box #chat-input-message {
-    height: 3rem;
     flex-grow: 1;
-    border: 4px solid #000;
-    border-right: none;
+    border: none;
     box-sizing: border-box;
     margin: 0px;
     padding: 0.75px 1.5rem;
-    border-radius: 2rem 0px 0px 2rem;
+    background: transparent;
     outline: none !important;
     font-size: 1.5rem;
     min-width: 0px;
@@ -95,31 +95,30 @@
 }
 
 #chat .chat-input-box #chat-send-message {
-    height: 3rem;
-    width: 6rem;
-    border: 4px solid #000;
+    font-family: "Material Symbols Rounded";
+    border: none;
     box-sizing: border-box;
     margin: 0px;
-    padding: 0px;
-    padding-right: 0.25rem;
+    padding: 0px 0.5rem 0px 1rem;
     display: block;
-    align-content: center;
-    background-color: #fff;
+    background-color: transparent;
     font-weight: 600;
-    font-size: 1.25rem;
+    font-size: 40px;
     color: #000;
-    border-radius: 0px 2rem 2rem 0px;
-    box-shadow: 0px 0px 0px 0px #000 inset;
+    border-radius: 2rem;
     flex-grow: 0;
     flex-shrink: 0;
+    align-self: center;
+    cursor: pointer;
+    box-shadow: 0px 0px 0px -4px #000, 0px 0px 0px 6px transparent;
 }
 
 #chat .chat-input-box #chat-send-message:hover {
-    box-shadow: 0px 0px 0px 2px #000 inset;
+    box-shadow: 0px 0px 0px 4px #000, 0px 0px 0px 6px transparent;
 }
 
-#chat .chat-input-box #chat-send-message:active {
-    box-shadow: 0px 0px 0px 2px #000 inset;
+#chat .chat-input-box:has(#chat-send-message:active),
+#chat .chat-input-box:has(#chat-send-message._clck) {
     background-color: #000;
     transition: 0s 0s ease;
 }
@@ -134,6 +133,7 @@
     overflow-x: visible;
     align-items: stretch;
     width: calc(40vw);
+    position: relative;
 }
 
 #chat .chat-log .message-box {
@@ -146,6 +146,12 @@
     justify-content: stretch;
     overflow-y: visible;
     overflow-x: visible;
+    background-color: #0000;
+}
+
+#chat .chat-log .message-box:hover {
+    background-color: #0001;
+    transition: 0.1s ease;
 }
 
 #chat .chat-log .message-box .message {
@@ -153,13 +159,15 @@
     display: grid;
     grid-template-columns: calc(2rem + 0px) auto 1fr;
     grid-template-rows: 1rem auto;
-    padding-top: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     /* position: relative;
     left: -1rem;
     right: -1rem; */
     overflow: visible;
     margin-left: calc(2rem - 16px);
     margin-right: 16px;
+    flex-grow: 1;
 }
 
 #chat:hover .chat-log .message-box .message,
@@ -193,6 +201,20 @@
     font-size: 0.75rem;
     user-select: none;
     opacity: 0;
+}
+
+#chat .chat-log .message-box.shrink .message {
+    grid-template-columns: calc(2rem + 0px) auto 1fr;
+    grid-template-rows: 0px auto;
+    padding-top: 0rem;
+}
+
+#chat .chat-log .message-box.shrink .message .message-icon {
+    display: none;
+}
+
+#chat .chat-log .message-box.shrink .message .message-name {
+    display: none;
 }
 
 #chat .chat-log .message-box .message .message-separator {
