--- a/PartyMasterFrontend/src/Chat.css
+++ b/PartyMasterFrontend/src/Chat.css
@@ -66,14 +66,14 @@
     height: 3rem;
     opacity: 0;
     border-radius: 2rem;
-    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 0px #000, 0px 0px 0px 12px transparent;
+    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 0px var(--black), 0px 0px 0px 12px transparent;
     margin: 0rem 1rem;
     width: calc(40vw - 2rem);
-    border: solid 4px black;
+    border: solid 4px var(--black);
 }
 
 #chat .chat-input-box:has(#chat-input-message:focus) {
-    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 8px #000, 0px 0px 0px 12px transparent;
+    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 8px var(--black), 0px 0px 0px 12px transparent;
 }
 
 #chat:hover .chat-input-box,
@@ -104,22 +104,22 @@
     background-color: transparent;
     font-weight: 600;
     font-size: 40px;
-    color: #000;
+    color: var(--black);
     border-radius: 2rem;
     flex-grow: 0;
     flex-shrink: 0;
     align-self: center;
     cursor: pointer;
-    box-shadow: 0px 0px 0px -4px #000, 0px 0px 0px 6px transparent;
+    box-shadow: 0px 0px 0px -4px var(--black), 0px 0px 0px 6px transparent;
 }
 
 #chat .chat-input-box #chat-send-message:hover {
-    box-shadow: 0px 0px 0px 4px #000, 0px 0px 0px 6px transparent;
+    box-shadow: 0px 0px 0px 4px var(--black), 0px 0px 0px 6px transparent;
 }
 
 #chat .chat-input-box:has(#chat-send-message:active),
 #chat .chat-input-box:has(#chat-send-message._clck) {
-    background-color: #000;
+    background-color: var(--black);
     transition: 0s 0s ease;
 }
 
@@ -147,11 +147,12 @@
     overflow-y: visible;
     overflow-x: visible;
     background-color: #0000;
+    /* transition-delay: 0.1s; */
 }
 
 #chat .chat-log .message-box:hover {
     background-color: #0001;
-    transition: 0.1s ease;
+    transition: 0.05s ease;
 }
 
 #chat .chat-log .message-box .message {
@@ -186,8 +187,8 @@
     margin: 4px 0px;
     user-select: none;
     border-radius: 5rem;
-    box-shadow: 0px 0px 0px 4px #000;
-    background-color: #000;
+    box-shadow: 0px 0px 0px 4px var(--black);
+    background-color: var(--black);
 }
 
 #chat .chat-log .message-box .message .message-name {
@@ -196,7 +197,7 @@
     align-self: center;
     justify-self: start;
     height: 1rem;
-    color: #000;
+    color: var(--black);
     font-weight: 200;
     font-size: 0.75rem;
     user-select: none;
@@ -223,7 +224,7 @@
     grid-column: 2;
     grid-row: 1 / 3;
     align-self: stretch;
-    background-color: #000;
+    background-color: var(--black);
     user-select: none;
     margin: 0px 12px 0px 8px;
 }
