--- a/PartyMasterFrontend/src/Player.css
+++ b/PartyMasterFrontend/src/Player.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     font-size: 1.2rem;
     transition: 0.3s 0s ease;
-    /* border: 1px solid black; */
+    /* border: 1px solid var(--black); */
     width: 4rem;
     justify-self: start;
     background: linear-gradient(90deg, #ffff, #fff0);
@@ -42,7 +42,7 @@
     background-color: var(--bg);
     padding: 0px;
     margin: 0px;
-    box-shadow: 0px 0px 0px 4px var(--bg), 0px 0px 0px 10px transparent, 0px 0px 0px 0px #000f;
+    box-shadow: 0px 0px 0px 4px var(--bg), 0px 0px 0px 10px transparent, 0px 0px 0px 0px var(--black);
     outline: none;
     border: none;
     display: flex;
@@ -59,7 +59,7 @@
     padding-left: 0.5em;
     display: block;
     width: 24px;
-    color: #000;
+    color: var(--black);
     font-weight: 800;
 }
 .playerlist .player:hover .player-name .player-kick {
@@ -69,7 +69,7 @@
 }
 .playerlist .player:hover .player-name .player-kick:hover {
     box-shadow: 0px 0px 0px 4px #fc4c4c, 0px 0px 0px 10px transparent, 0px 0px 0px 8px #000f;
-    color: #000f;
+    color: var(--black);
     background-color: #fc4c4c;
 }
 .playerlist .player .player-name .player-master {
@@ -80,17 +80,17 @@
     border-radius: 5rem;
     width: 2rem;
     height: 2rem;
-    box-shadow: 0px 0px 0px 4px black;
+    box-shadow: 0px 0px 0px 4px var(--black);
     overflow: hidden;
     transition: inherit;
-    background-color: black;
+    background-color: var(--black);
     z-index: 2;
 }
 
 .playerlist:hover .player .player-icon {
     width: 3rem;
     height: 3rem;
-    box-shadow: 0px 0px 0px 4px black;
+    box-shadow: 0px 0px 0px 4px var(--black);
 }
 
 .playerlist .player .player-icon img {
@@ -130,7 +130,7 @@
 }
 
 .playerlist:hover .player:hover .player-icon {
-    box-shadow: 0px 0px 0px 8px black;
+    box-shadow: 0px 0px 0px 8px var(--black);
     width: 4rem;
     height: 4rem;
     z-index: 3;
