Implemented Player and Lobby automatic shutdown based on Timer (5s & 60s)

--- a/PartyMasterFrontend/src/Player.css
+++ b/PartyMasterFrontend/src/Player.css
@@ -14,7 +14,7 @@
 }
 
 .playerlist:hover {
-    width: 40vw;
+    width: 50vw;
 }
 
 .playerlist .player {
@@ -123,6 +123,7 @@
 
 .playerlist:hover .player .player-name {
     width: auto;
+    flex-shrink: 1;
 }
 
 .playerlist:hover .player:hover .player-name {
