--- a/PartyMasterFrontend/src/Chat.css
+++ b/PartyMasterFrontend/src/Chat.css
@@ -121,6 +121,7 @@
 #chat .chat-input-box:has(#chat-send-message._clck) {
     background-color: var(--black);
     transition: 0s 0s ease;
+    box-shadow: 0px 0px 0px 4px #fff, 0px 0px 0px 8px var(--black), 0px 0px 0px 12px transparent;
 }
 
 #chat .chat-log {
