--- a/PartyMasterFrontend/src/Player.css
+++ b/PartyMasterFrontend/src/Player.css
@@ -1,20 +1,74 @@
 
+.sidebar {
+    display: flex;
+    align-content: stretch;
+    justify-content: stretch;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    transition: 0.3s 0s ease;
+    width: 4rem;
+    overflow: hidden;
+}
+
+.sidebar:hover {
+    width: 50vw;
+}
+
+.playeractions {
+    display: grid;
+    grid-template-columns: 1fr auto auto auto;
+    grid-template-rows: auto;
+    gap: 12px;
+    transition: inherit;
+    opacity: 0;
+    margin: 1rem;
+    align-items: center;
+}
+
+.sidebar .currentroom {
+    text-transform: uppercase;
+}
+
+.sidebar:hover .playeractions {
+    opacity: 1;
+}
+
+.playeractions button {
+    border: 4px solid var(--black);
+    box-sizing: border-box;
+    margin: 0px;
+    display: block;
+    align-content: center;
+    background-color: #fff;
+    color: var(--black);
+    border-radius: 1rem;
+    box-shadow: 0px 0px 0px 4px var(--bg), 0px 0px 0px 0px var(--black), 0px 0px 0px 10px transparent;
+    transition: inherit;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+.playeractions button:hover, .playeractions button:focus {
+    box-shadow: 0px 0px 0px 4px var(--bg), 0px 0px 0px 8px var(--black), 0px 0px 0px 10px transparent;
+}
+
+.playeractions button:active {
+    box-shadow: 0px 0px 0px 4px var(--bg), 0px 0px 0px 8px var(--black), 0px 0px 0px 10px transparent;
+    background-color: var(--black);
+    transition: 0s 0s ease;
+}
+
 .playerlist {
     display: flex;
     align-content: flex-start;
     justify-content: center;
     flex-wrap: nowrap;
     flex-direction: column;
+    flex-grow: 1;
     font-size: 1.2rem;
-    transition: 0.3s 0s ease;
+    transition: inherit;
     /* border: 1px solid var(--black); */
-    width: 4rem;
     justify-self: start;
-    background: linear-gradient(90deg, #ffff, #fff0);
-}
-
-.playerlist:hover {
-    width: 50vw;
 }
 
 .playerlist .player {
@@ -97,7 +151,7 @@
     z-index: 2;
 }
 
-.playerlist:hover .player .player-icon {
+.sidebar:hover .playerlist .player .player-icon {
     width: 3rem;
     height: 3rem;
     box-shadow: 0px 0px 0px 4px var(--black);
@@ -127,20 +181,20 @@
     /* flex-basis: 3rem; */
 }
 
-.playerlist:hover .player {
+.sidebar:hover .playerlist .player {
     gap: 2rem;
 }
 
-.playerlist:hover .player .player-name {
+.sidebar:hover .playerlist .player .player-name {
     width: auto;
     flex-shrink: 1;
 }
 
-.playerlist:hover .player:hover .player-name {
+.sidebar:hover .playerlist .player:hover .player-name {
     font-weight: 800;
 }
 
-.playerlist:hover .player:hover .player-icon {
+.sidebar:hover .playerlist .player:hover .player-icon {
     box-shadow: 0px 0px 0px 8px var(--black);
     width: 4rem;
     height: 4rem;
