--- a/PartyMasterFrontend/src/Player.css
+++ b/PartyMasterFrontend/src/Player.css
@@ -16,7 +16,7 @@
 
 .playeractions {
     display: grid;
-    grid-template-columns: 1fr auto auto auto;
+    grid-template-columns: auto auto auto 1fr;
     grid-template-rows: auto;
     gap: 12px;
     transition: inherit;
@@ -48,7 +48,7 @@
     flex-grow: 1;
 }
 
-.playeractions button:hover, .playeractions button:focus {
+.playeractions button:hover {
     box-shadow: 0px 0px 0px 4px var(--bg), 0px 0px 0px 8px var(--black), 0px 0px 0px 10px transparent;
 }
 
